--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-image-zooom": "^1.3.4",
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
     "sass": "^1.69.3",
