fix image and message chat

--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ NEXT_PUBLIC_URL_RETURN=http://127.0.0.1:3000
 URL=https://www.eviromet.com/api/v1
 AUTH_SECRET=https://www.eviromet.com
 NEXTAUTH_SECRET=https://www.eviromet.com
+WEB_URL=https://www.eviromet.com
