--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
 NEXT_PUBLIC_API_URL=https://www.eviromet.com/api/v1
 NEXT_PUBLIC_URL_RETURN=http://127.0.0.1:3000
 URL=https://www.eviromet.com/api/v1
+WEB_URL=https://www.eviromet.com/
